[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ui/Fonts/Coolvetica/coolvetica condensed rg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Ui/DayContainer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="DayContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayButton" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 297.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Day 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusButton" type="Button" parent="."]
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Bonus"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DayButton" to="." method="_on_DayButton_pressed"]
[connection signal="pressed" from="BonusButton" to="." method="_on_BonusButton_pressed"]
